@@ -208,7 +208,7 @@
 				</loop>
 			</area>
 
-			<area condition="gt({numtimers}, 4)++eq({indexpanelMain}, 3)" x="45%" y="80%" width="34%" height="18%" layer="3">
+			<area condition="gt({numtimers}, 4)++eq({indexpanelMain}, 3)" x="{areawidth}*0.453" y="80%" width="34%" height="18%" layer="3">
 				<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
 					<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
 					<drawtextbox condition="isset{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
@@ -216,7 +216,7 @@
 				</loop>
 			</area>
 
-			<area condition="eq({numtimers}, 4)" x="45%" y="80%" width="34%" height="18%" layer="3">
+			<area condition="eq({numtimers}, 4)" x="{areawidth}*0.453" y="80%" width="34%" height="18%" layer="3">
 				<loop name="recordings" x="0" y="0" orientation="horizontal" columnwidth="{areawidth}/3" rowheight="{areaheight}" overflow="cut">
 					<drawtext x="0" y="10%" align="center" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[date]} {recordings[time]}" />
 					<drawtextbox condition="isset{recordings[seriesname]}" x="2%" y="40%" width="{columnwidth}*0.9" align="center" maxlines="3" font="{light}" fontsize="15%" color="{clrLightGray}" text="{recordings[seriesname]} - {recordings[name]}" />
