@@ -4,6 +4,7 @@ shady-KISS-skin History
 2016-02-29:
 - Fixed background of separator in displaymenuschedules
 - Added presenteventtitle to listitems in displaymenuchannel without currentelement
+- Added special display for timeredit, recordingedit and zaphistory-plugin in displaymenudefault 
 
 2016-02-27:
 - Added presenteventtitle to listitems in displaymenuchannel
